Fixed code rabbit comments
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>